<resources>
    <string name="app_name">openFashion</string>
    <string name="login">LogIn</string>
    <string name="sign_up">Sign Up</string>
    <string name="_1_of_3">1 of 3</string>
    <string name="_2_of_3">2 of 3</string>
    <string name="_3_of_3">3 of 3</string>
    <string name="text_view_heading">Welcome Onboard OpenFashion</string>
    <string name="description1">Find perfect Clothes that shine on you!!!!</string>
    <string name="description2">Get your loved ones the perfect fit....</string>
    <string name="description3">Perfect spot for all your occasions ;)</string>
    <string name="user_login">User Login</string>
    <string name="usersubtext">Login to access the fashion world!</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="log_in">Login</string>
    <string name="forget_password">Forgot Password?</string>
    <string name="signup_text">No account yet you are missing a lot in the new fashion world!!</string>
    <string name="login_text">Already had an account just click here to access the world directly...</string>
    <string name="forget_password_subtext">Dont panic we are here for you..</string>
    <string name="enter_email">Enter your Email Address</string>
    <string name="send_link">Send Link</string>
    <string name="enter_email_address">Enter your Email Address</string>
    <string name="user_signup">User Signup</string>
    <string name="user_signup_sub_text">Your just a few steps away to access a new fashion world !!!</string>
    <string name="full_name">Full Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="next">Next ></string>
    <string name="set_password">Set Password</string>
    <string name="set_password_subtext">Secure your fashion world...</string>
    <string name="enter_password">Enter Password</string>
    <string name="re_enter_password">Re-Enter Password</string>
    <string name="continuee">Continue</string>
    <string name="go_back">Go Back</string>
    <string name="username">Nikita Behra</string>
    <string name="cart">Cart</string>
    <string name="pink_crew_neck_t_shirt">Pink Crew Neck T-shirt</string>
    <string name="_499">₹499</string>
    <string name="size">Size:</string>
    <string name="item">Item:</string>
    <string name="home">Home</string>
    <string name="navigation">Navigation</string>
    <string name="profile">Profile</string>
    <string name="logout">Log Out!</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="dummy_score">1,250</string>
    <string name="score">1,250</string>
    <string name="orders">Order</string>
    <string name="taps">Taps</string>
    <string name="dashboard">DashBoard</string>
    <string name="Wishlist">Wishlist</string>
    <string name="Cart">Cart</string>
    <string name="Address">Address</string>
    <string name="Help">Help</string>
    <string name="Helpcenter">Help center</string>
    <string name="size_chart">Size Chart</string>
    <string name="how_to_return">How to return</string>
    <string name="FAQs">FAQS</string>
    <string name="Agreement">Agreement</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="Terms_and_conditions">Terms and Conditions</string>
    <string name="About_us">About Us</string>
    <string name="Account">Account</string>
    <string name="Profile_details">Profile Details</string>
    <string name="tips">Tips</string>
    <string name="Settings">Settings</string>
    <string name="Beta">Beta</string>
    <string name="joinour_team">Join our team</string>
    <string name="search">Search</string>
    <string name="men">Men</string>
    <string name="black_hoodie">Black Hoodie</string>
    <string name="five_hundred">₹500</string>
    <string name="seven_hundred">₹700</string>
    <string name="nine_hundred">₹900</string>
    <string name="fifteen_hundred">₹1500</string>
    <string name="blue_shirt">Blue Shirt</string>
    <string name="mens">Mens</string>
    <string name="kids">Kids</string>
    <string name="women">Women</string>
    <string name="formals">Formals</string>
    <string name="sports">Sports</string>
    <string name="girls">Girls</string>
    <string name="blackCrewNeckTShirt">Black Crew Neck T-Shirt</string>
    <string name="pinkCrewNeckTShirt">Pink Crew Neck T-Shirt</string>
    <string name="SlimWomen">Slim Women</string>
    <string name="WomensGrayHoodie">Woman\'s Gray Hoodie</string>
    <string name="WomensDressWithStripes">Woman\'s Dress with Stripes</string>
    <string name="WomensPinkCoverOns">Woman\'s Pink Cover Ons</string>

    <string name="start_ordering">Start Ordering</string>
    <string name="no_orders">No Orders Yet</string>
    <string name="men_Measurement">Men Measurement</string>
    <string name="Change_units">Change Units</string>
    <string name="inches">in</string>
    <string name="centimeters">cm</string>
    <string name="women_Measurement">Women Measurement</string>
    <string name="one_point">Upon delivery, a product may be returned within 4 days.</string>
    <string name="two_point">The item must be repackaged with all tags.</string>
    <string name="three_point">If you wish to return the item, please dont wash it.</string>
    <string name="four_point">If any item is found to be damaged, then the return will be cancelled immediately.</string>
    <string name="five_point">Our agent will pick up the item in 2 working days after you opt to return it.</string>
    <string name="add_address_text">Add New Address</string>
    <string name="Name">Name*</string>
    <string name="mobile">Mobile *</string>
    <string name="pincode">Pincode *</string>
    <string name="state">State *</string>
    <string name="address">Address(House No., Building Street, Area) *</string>
    <string name="locality">Locality/Town *</string>
    <string name="city">City/District *</string>
    <string name="save">Save</string>
    <string name="Womens_wear">Womens Fashion wear</string>
    <string name="Yellow_shirt">Yellow Crow Nock Shirt</string>
    <string name="quantity">Quantity</string>
    <string name="Price">Price</string>
    <string name="Amount">₹499</string>
    <string name="product_message">Fashion is form of self-expression and autonomy at a
perticular period and place and in a specific context</string>
    <string name="Select_size">Select Size</string>

</resources>