<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SizeChartActivity">

    <androidx.cardview.widget.CardView
        android:id="@+id/topscreen_size_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingVertical="20dp">

            <ImageView
                android:id="@+id/back_sc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="25dp"
                android:src="@drawable/ic_baseline_arrow_back_ios_24"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/sc_txt"
                style="@style/internal_heading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/droid_serif"
                android:layout_marginTop="3dp"
                android:paddingStart="10dp"
                android:text="@string/size_chart"
                app:layout_constraintStart_toEndOf="@+id/back_sc"
                app:layout_constraintTop_toTopOf="@+id/back_sc" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/bottom_Sizechart_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/topscreen_size_card">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/bottom_Sizechart_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingVertical="20dp">


            <TextView
                style="@style/sub_title_bold_18"
                android:id="@+id/men_measurement_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/men_Measurement"
                android:layout_marginTop="5dp"
                android:paddingStart="25dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.SwitchCompat
                style="@style/sub_title_bold_12"
                android:id="@+id/switch_men"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="15dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:text="@string/Change_units"
                android:textOff="@string/inches"
                android:textOn="@string/centimeters"
                app:showText="true"/>

            <ImageView
                android:id="@+id/men_sc_img"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="-90dp"
                android:layout_marginStart="200dp"
                android:layout_marginEnd="200dp"
                app:layout_constraintTop_toBottomOf="@+id/switch_men" />

            <TextView
                style="@style/sub_title_bold_18"
                android:id="@+id/women_measurement_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/women_Measurement"
                android:layout_marginTop="5dp"
                android:paddingStart="25dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/men_sc_img"/>

            <androidx.appcompat.widget.SwitchCompat
                style="@style/sub_title_bold_12"
                android:id="@+id/switch_women"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="15dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/men_sc_img"
                android:text="@string/Change_units"
                android:textOff="@string/inches"
                android:textOn="@string/centimeters"
                app:showText="true"/>

            <ImageView
                android:id="@+id/women_sc_img"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="-50dp"
                android:layout_marginStart="200dp"
                android:layout_marginEnd="200dp"
                app:layout_constraintTop_toBottomOf="@+id/switch_women" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>



</androidx.constraintlayout.widget.ConstraintLayout>