<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:id="@+id/one"
        android:layout_width="170dp"
        android:layout_height="230dp"
        app:cardCornerRadius="30dp"
        android:layout_marginTop="15dp"
        android:layout_marginStart="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/pref1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/black2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/two"
        android:layout_width="180dp"
        android:layout_height="230dp"
        android:layout_marginTop="15dp"
        android:layout_marginStart="20dp"
        app:cardCornerRadius="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/one"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/pref2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/men_on_boarding"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/one_text"
        style="@style/sub_title_bold_16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/black_hoodie"
        android:layout_marginTop="10dp"
        android:layout_marginStart="25dp"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/one" />

    <TextView
        android:id="@+id/one_price"
        style="@style/sub_title_bold_16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/five_hundred"
        android:layout_marginStart="15dp"
        android:layout_marginTop="10dp"
        android:textColor="@color/black"
        app:layout_constraintStart_toEndOf="@+id/one_text"
        app:layout_constraintTop_toBottomOf="@+id/one" />

    <TextView
        android:id="@+id/two_text"
        style="@style/sub_title_bold_16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/blue_shirt"
        android:layout_marginTop="10dp"
        android:layout_marginStart="50dp"
        android:textColor="@color/black"
        app:layout_constraintStart_toEndOf="@+id/one_price"
        app:layout_constraintTop_toBottomOf="@+id/two" />

    <TextView
        android:id="@+id/two_price"
        style="@style/sub_title_bold_16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/seven_hundred"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:textColor="@color/black"
        app:layout_constraintStart_toEndOf="@+id/two_text"
        app:layout_constraintTop_toBottomOf="@+id/one" />




</androidx.constraintlayout.widget.ConstraintLayout>