<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">
    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:cardCornerRadius="10dp"
        app:cardBackgroundColor="@color/back_btn_colour">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">
            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:cardCornerRadius="15dp">
                <ImageView
                    android:id="@+id/itemImageCartCard"
                    android:layout_width="120dp"
                    android:layout_height="150dp"
                    android:src="@drawable/pink_shirt"/>
            </androidx.cardview.widget.CardView>
            <LinearLayout
                android:layout_width="200dp"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/itemNameCartCard"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/pink_crew_neck_t_shirt"
                    android:textSize="18sp" />
                <TextView
                    android:id="@+id/itemPriceCartCard"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_499"
                    android:layout_marginTop="10dp"
                    android:textSize="30sp"
                    android:textColor="@color/black"
                    android:textStyle="bold"/>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp">
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@color/back_btn_colour">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/size"
                            android:textColor="@color/black"
                            android:textSize="20sp"/>
                        <Spinner
                            android:id="@+id/spinnerSize"
                            android:layout_width="50dp"
                            android:layout_height="wrap_content"/>
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@color/back_btn_colour"
                        android:layout_marginStart="10dp">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/item"
                            android:textColor="@color/black"
                            android:textSize="20sp"/>
                        <Spinner
                            android:id="@+id/spinnerItem"
                            android:layout_width="50dp"
                            android:layout_height="wrap_content"/>
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/ic_baseline_delete_outline_24" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>